src/objects/ffbc__PricingStructure__c.object
<CustomObject>
    <customHelpPage>ffbc__pricingstructureshelp</customHelpPage>
    <description>Contains a list of price breaks to be applied for different quantities on contract line items.</description>
    <fields>
        <fullName>ffbc__Description__c</fullName>
        <description>Description of the pricing structure.</description>
        <inlineHelpText>Description of the pricing structure.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffbc__MaximumUnitPrice__c</fullName>
        <description>Maximum unit price of the quantity breaks associated with this pricing structure.</description>
        <inlineHelpText>Maximum unit price of the quantity breaks associated with this pricing structure.</inlineHelpText>
        <label>Maximum Unit Price</label>
        <summarizedField>ffbc__QuantityBreak__c.ffbc__UnitPrice__c</summarizedField>
        <summaryForeignKey>ffbc__QuantityBreak__c.ffbc__PricingStructure__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffbc__MinimumUnitPrice__c</fullName>
        <description>Minimum unit price of the quantity breaks associated with this pricing structure.</description>
        <inlineHelpText>Minimum unit price of the quantity breaks associated with this pricing structure.</inlineHelpText>
        <label>Minimum Unit Price</label>
        <summarizedField>ffbc__QuantityBreak__c.ffbc__UnitPrice__c</summarizedField>
        <summaryForeignKey>ffbc__QuantityBreak__c.ffbc__PricingStructure__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffbc__PricingType__c</fullName>
        <description>The type of pricing to be used in billing. For tiered pricing, the price for each quantity break is applied only to units that exceed its quantity. For volume pricing, the price is applied to all units.</description>
        <inlineHelpText>The type of pricing to be used in billing. For tiered pricing, the price for each quantity break is applied only to units that exceed its quantity. For volume pricing, the price is applied to all units.</inlineHelpText>
        <label>Pricing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Volume</fullName>
                    <default>true</default>
                    <label>Volume</label>
                </value>
                <value>
                    <fullName>Tiered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffbc__UsageBillingType__c</fullName>
        <description>Determines the way in which usage is billed for a contract line item. When Total Usage is selected, unit prices are based on the total quantity of all usage of the product. When Per Usage is selected, unit prices are calculated based on the quantity used within each usage record of the product.</description>
        <inlineHelpText>Determines the way usage is billed. When Total Usage is selected, unit prices are based on the total quantity of all usage of the product. When Per Usage is selected, unit prices are based on the quantity used within each usage record of the product.</inlineHelpText>
        <label>Usage Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Total Usage</fullName>
                    <default>true</default>
                    <label>Total Usage</label>
                </value>
                <value>
                    <fullName>Per Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Pricing Structure</label>
    <listViews>
        <fullName>ffbc__All</fullName>
        <columns>NAME</columns>
        <columns>ffbc__Description__c</columns>
        <columns>ffbc__PricingType__c</columns>
        <columns>ffbc__UsageBillingType__c</columns>
        <columns>ffbc__MinimumUnitPrice__c</columns>
        <columns>ffbc__MaximumUnitPrice__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PS{0000000000}</displayFormat>
        <label>Pricing Structure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Structures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>